<resources>
    <string name="app_name" translatable="false">小K云管家</string>
    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>
    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
    <string name="skip" translatable="false">跳过3s</string>
    <string name="toUse" translatable="false">立即体验</string>
    <string name="homepage" translatable="false">首页</string>
    <string name="info" translatable="false">相册</string>
    <string name="mine" translatable="false">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="mobile_not_sign_up">该手机号未注册，请立即注册</string>
    <string name="signup">注册</string>
    <string name="sign_up_now">立即注册</string>
    <string name="where_come_kwifimanager">欢迎来到小k云管家</string>
    <string name="input_phone_number_please">请输入手机号</string>
    <string name="input_verify_code_please">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="set_new_account_password">请设置新的登录密码</string>
    <string name="input_password_please">请输入密码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="set_password_success">设置密码成功</string>
    <string name="confirm">确认</string>
    <string name="read_and_agree">已阅读并同意</string>
    <string name="user_protocol">《用户协议》</string>
    <string name="private_protocol">《隐私政策》</string>
    <string name="input_password">请输入密码</string>
    <string name="sms_sign_in">短信快捷登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="modify_password">修改密码</string>
    <string name="sign_in_k">登录小k云管家</string>
    <string name="find_password_success">找回密码成功</string>
    <string name="password_not_equal">两次密码不一致</string>
    <string name="verify_code_input_error">验证码输入有误</string>
    <string name="bind_k_wifi_manager">绑定小k云管家</string>
    <string name="join_family_code">加入家庭码</string>
    <string name="join_family_tips">输入家庭码，立即加入某个家庭</string>
    <string name="input_family_code">输入家庭码</string>
    <string name="product_introduce">产品介绍</string>
    <string name="come_back_home">欢迎回家</string>
    <string name="my_k_ap">我的小k</string>
    <string name="iam_bear">我是小熊</string>
    <string name="invite_member">邀请成员</string>
    <string name="admin">管理员</string>
    <string name="parent_control">家长控制</string>
    <string name="healthy_model">健康模式</string>
    <string name="look_week_report">查看周报</string>
    <string name="children_list">儿童关爱列表</string>
    <string name="wifi_setting">WiFi设置</string>
    <string name="to_back_up">去备份</string>
    <string name="how_much_picture_backup">您有%s张新的照片未备份,是否现在备份?</string>
    <string name="education_recommend">教育优选</string>
    <string name="conn_device">联网设备</string>
    <string name="network_speed_now">“当前在线%s台/上行网速%s/下行网速%s”</string>
    <string name="look_all">查看全部</string>
    <string name="title_take_care_children">儿童上网关爱</string>
    <string name="bind_now">立即绑定</string>
    <string name="option_network">配置网络</string>
    <string name="online_wifi_bind_xiaok">请连接wifi名称“xiaok-****”的设备\n并配置网络</string>
    <string name="choose_online_type">选择上网方式</string>
    <string name="online_type_dial_up">宽带拨号上网</string>
    <string name="online_type_static_ip">静态IP上网</string>
    <string name="online_type_dynamic_ip">动态IP上网</string>
    <string name="input_internet_account">输入宽带账号</string>
    <string name="input_net_password">输入宽带密码</string>
    <string name="tips">提示</string>
    <string name="online_tips">联网提示</string>
    <string name="scanning">扫描中…</string>
    <string name="commit_ing">正在提交…</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="skip_set_network">测试跳过配网绑定</string>
    <string name="goto_online_setting">前往连接小K</string>
    <string name="connect_xiaok_tips1">请在后续流程中保持小K连接状态</string>
    <string name="bind_success">绑定设备成功</string>
    <string name="has_wifi_connected">您已连接WiFi</string>
    <string name="has_xiaok_connected">您已连接xiaok-WiFi</string>
    <string name="ip_address_">IP地址：</string>
    <string name="ip_address">IP地址</string>
    <string name="ip_hint">192.168.0.0</string>
    <string name="subnet_mask">子网掩码：</string>
    <string name="hint_subnet">0.0.0.0</string>
    <string name="gateway_">网关：</string>
    <string name="first_dns_server">首选DNS服务器：</string>
    <string name="second_dns_server">备用DNS服务器：</string>
    <string name="ip_address_error">IP地址格式错误</string>
    <string name="subnet_mask_error">子网掩码格式错误</string>
    <string name="gateway_error">网关格式错误</string>
    <string name="first_dns_server_error">首选DNS服务器格式错误</string>
    <string name="second_dns_server_error">备用DNS服务器格式错误</string>
    <string name="set_wifi_name_pwd">设置Wi-Fi名称密码</string>
    <string name="input_wifi_name">请输入Wi-Fi名称</string>
    <string name="input_wifi_pwd">请输入Wi-Fi密码</string>
    <string name="complete">完成</string>
    <string name="switch_xiaok">切换小K</string>
    <string name="modify_failed">修改失败</string>
    <string name="set_option_success">配置成功</string>
    <string name="input_wifi_name_please">请输入合法的WiFi名称</string>
    <string name="input_wifi_passowrd_please">请设置8–20位的WiFi密码</string>
    <string name="modify_wifi_tips">修改WiFi名称或密码会断开当前连接，请更改成功后连接修改后的WiFi!</string>
    <string name="try_to_connect_wifi">正在连接网络，请稍候</string>
    <string name="connect_success">网络连接成功</string>
    <string name="connect_fail">网络连接失败，请检查配置后再试</string>
    <string name="dynamic_ip_set_fail">配置动态上网失败，请稍后再试</string>
    <string name="wifi_info_modify_success">WiFi信息修改成功</string>
    <string name="wifi_info_update_failed">WiFi信息更新失败</string>
    <string name="remark">备注</string>
    <string name="option_ing">配置中…</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="last_week_active_app">上周活跃应用</string>
    <string name="input_family_code_please">请输入家庭码</string>
    <string name="input_family_code_into_family">输入家庭码加入家庭</string>
    <string name="family_code_ok">家庭码正确</string>
    <string name="family_code_error">家庭码错误</string>
    <string name="family_code_error_tips">请输入正确的家庭码</string>
    <string name="input_again">再次输入</string>
    <string name="family_member">家庭成员</string>
    <string name="delete_member">家庭成员</string>
    <string name="modify_name">修改名称</string>
    <string name="input_new_name_please">请输入新的名称</string>
    <string name="input_name_please">请输入名称</string>
    <string name="double_click_for_exit">连续点击两次返回退出应用</string>
    <string name="message_center">消息中心</string>
    <string name="ban_app">禁用App</string>
    <string name="online_time_control">上网时间控制</string>
    <string name="ban_app_tips">您可以根据不同设备，创建不同的禁用APP</string>
    <string name="ban_time_tips">您可以根据不同设备，创建不同的上网时间控制</string>
    <string name="online_start_time">上网开始时间</string>
    <string name="online_end_time">上网结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="confirm_din">确定</string>
    <string name="edit">编辑</string>
    <string name="choose_time">选择时间</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="serial_id">序列号：</string>
    <string name="unbind_k">解绑小k</string>
    <string name="update_version">升级版本</string>
    <string name="current_device_version">当前固件版本：</string>
    <string name="new_device_version">最新固件版本：</string>
    <string name="update_now">立即更新</string>
    <string name="base_setting">基础设置</string>
    <string name="set_wifi_name">设置WiFi名称</string>
    <string name="set_wifi_passowrd">设置WiFi密码</string>
    <string name="no_password_easy_gay">未设置密码（WiFi容易被蹭）</string>
    <string name="senior_settings">高级设置</string>
    <string name="wifi_toolkit">WiFi工具箱</string>
    <string name="toolkit_guard_join_net">防蹭网</string>
    <string name="toolkit_senior_setting">无线高级设置</string>
    <string name="toolkit_online_setting">上网设置</string>
    <string name="toolkit_lan_setting">LAN口设置</string>
    <string name="toolkit_restart_device">重启路由器</string>
    <string name="toolkit_dhcp_server">DHCP服务器</string>
    <string name="toolkit_reset_device">恢复出厂设置</string>
    <string name="confirm_restart_please">请确认是否重启</string>
    <string name="confirm_reset_please">请确认是否恢复出厂设置</string>
    <string name="tips_device_restart">路由器重启预计需要几分钟时间，重启 过程中，所有已连设备会断开连接</string>
    <string name="tips_device_reset">路由器的所有配置将恢复 至出厂时的默认状态</string>
    <string name="has_no_guard_device">暂时没有添加任何设备\n请添加不允许上网的防蹭网设备</string>
    <string name="add_guard_join_device">+ 添加防蹭网设备</string>
    <string name="net_broadcast">无线广播</string>
    <string name="net_channel">无线信道</string>
    <string name="auto">自动</string>
    <string name="work_model">工作模式</string>
    <string name="model_11bgn">11BGN</string>
    <string name="spectrum_bandwidth">频段带宽</string>
    <string name="save">保存</string>
    <string name="current_online_tai">当前在线(台)</string>
    <string name="sb_auto">自动</string>
    <string name="sb_20mhz">20Mhz</string>
    <string name="wm_11b">11b</string>
    <string name="wm_11g">11g</string>
    <string name="wm_11bn">11bn</string>
    <string name="wm_11n">11n</string>
    <string name="wm_11gbn">11gbn</string>
    <string name="nc_auto">自动</string>
    <string name="nc_1">1</string>
    <string name="nc_2">2</string>
    <string name="nc_3">3</string>
    <string name="nc_4">4</string>
    <string name="nc_5">5</string>
    <string name="nc_6">6</string>
    <string name="nc_7">7</string>
    <string name="nc_8">8</string>
    <string name="nc_9">9</string>
    <string name="device_list">设备列表</string>
    <string name="upload_speed">上行网速(K)</string>
    <string name="download_speed">下载网速(M)</string>
    <string name="remark_name">备注名称</string>
    <string name="device_info">设备信息</string>
    <string name="device_detail">设备详情</string>
    <string name="online_alarm">上线提醒</string>
    <string name="join_blacklisting">加入黑名单</string>
    <string name="blacklisting_tips">（黑名单设备不允许上网）</string>
    <string name="device_speed_limit">设备限速</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="type">类型</string>
    <string name="android">安卓</string>
    <string name="brand">品牌</string>
    <string name="mac_address">MAC地址</string>
    <string name="my_kid">我的孩子</string>
    <string name="about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="current_version">当前版本</string>
    <string name="newer_version">最新版本</string>
    <string name="header_pic">头像</string>
    <string name="nick_name">昵称</string>
    <string name="mobile_number">手机号</string>
    <string name="password">密码</string>
    <string name="personal_info">个人信息</string>
    <string name="take_picture_camera">拍照</string>
    <string name="auto_get_ip_address">自动获取IP地址</string>
    <string name="static_ip_address">固定IP地址</string>
    <string name="pppoe">宽带拨号上网</string>
    <string name="gallery_lab">照片库</string>
    <string name="newer_picture">全部照片</string>
    <string name="intelligence_gallery">智能照片</string>
    <string name="share_gallery">共享照片</string>
    <string name="tips_guide_view_2">"若您的家庭已经拥有小K管家\n请立即输入家庭码\n加入某个家庭"</string>
    <string name="i_know">知道了</string>
    <string name="click_input_code">点击输入家庭码</string>
    <string name="join_family_share_gallery">加入亲友分享的共享相册</string>
    <string name="click_gallery_into_gallery">点击相册，进入到相册板块</string>
    <string name="delete_picture_title">"确认要将选中的照片删除吗?\n删除后照片将无法恢复"</string>
    <string name="delete_from_phone">从此手机删除</string>
    <string name="delete_from_desk">从硬盘中删除</string>
</resources>