<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_r8"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="35dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:textSize="17sp"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/text_4a5a78"
        android:text="@string/delete_picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_delete_from_phone"
        android:text="@string/delete_from_phone"
        android:paddingStart="10dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="26dp"
        android:button="@drawable/bg_check_box"
        android:textColor="@color/text_4a5a78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/cb_delete_from_desk"
        android:text="@string/delete_from_desk"
        android:paddingStart="10dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:button="@drawable/bg_check_box"
        android:textColor="@color/text_4a5a78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_left_lbr8_gray"
            android:gravity="center"
            android:textColor="@color/text_28354C"
            android:text="@string/cancel" />

        <View
            android:id="@+id/line10"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/c_f6f6f6"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_right_rbr8_main"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/confirm_din" />

    </LinearLayout>


</LinearLayout>