<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:background="@color/shadow_80black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@mipmap/guide_arrow_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/click_input_code"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/tips_guide_view_2"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_i_know"
        android:text="@string/i_know"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rectf_white_h34_r17"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="34dp" />

</LinearLayout>